# TK_kompilator

./: .gitignore  CMakeLists.txt  Compiler.kdev4  SymbolTableHelper.c  SymbolTableHelper.h  comp  emitter.c  emitter.cpp  error.c  file_my.asm  global.h  global.hpp  inc.h  lexer.c  lexer.cpp  lexer.l  main.c  makefile  my_bubble.asm  my_table  myfile  parser.c  parser.cpp  parser.h  parser.hpp  parser.y  symbol.c  symbol.cpp  symbol.h  symbols_my  symbols_vm  tests.sh  vm_table  vmfile  wynik.asm
.kdev4/: Compiler.kdev4
vm/: my_bubble.asm  t0.pas.asm
vm/my/: bubblesort.asm  t0.asm  t1.asm  t14.asm  t2.asm  t3.asm  t4.asm  t5.asm  t6.asm  t7.asm  t8.asm  t9.asm
